Chart filter/group responsiveness changed

--- a/src/app/components/not-shared/currency-item-details/chart/chart.component.html
+++ b/src/app/components/not-shared/currency-item-details/chart/chart.component.html
@@ -2,15 +2,32 @@
   
     <div class="{{ historyData ? 'flex flex-row-reverse' : 'hidden' }} gap-4 relative justify-between px-5 py-3 border-b border-light-text3 dark:border-dark-text3">
 
-      <button (click)="toggleTimeFrame()" class="hover:cursor-pointer text-dark-text3 dark:text-light-text3 hover:text-dark hover:dark:text-light duration-300 ease-in-out text-xs md:text-sm flex items-center justify-center gap-2">
-        تغییر بازه (تقویمی)
-        <i class="bi bi-calendar4 text-lg"></i>
+      <button (click)="toggleTimeFrame()" class="hover:cursor-pointer lg:hidden text-dark-text3 dark:text-light-text3 hover:text-dark hover:dark:text-light duration-300 ease-in-out text-xs md:text-sm flex items-center justify-center gap-2">
+        <span>تغییر بازه (تقویمی)</span>
+        <i [class.rotate-180]="timeFramePanelOpened()" class="bi bi-chevron-down transition-transform"></i>
+      </button>
+      <div class="hidden lg:flex flex-row-reverse gap-2 py-0.25">
+        <i appTooltip="تغییر بازه (تقویمی)" class="bi bi-calendar4 text-lg text-dark-text3 dark:text-light-text3"></i>
+        @for (p of presets; track p.label) {
+          <button
+            appTooltip="{{ p.title }}"
+            class="rtl rounded-md px-2 py-0.5 {{ isPresetActive(p) ? 'bg-light-border dark:bg-dark-border' : '' }} hover:cursor-pointer text-sm text-dark-text3 dark:text-light-text3 hover:text-dark hover:dark:text-light duration-300 ease-in-out"
+            (click)="selectPreset(p)">
+            {{ p.label }}
+          </button>
+        }
+      </div>
+      
+      <button
+        class="hover:cursor-pointer text-dark-text3 dark:text-light-text3 hover:text-dark hover:dark:text-light duration-300 ease-in-out text-xs md:text-sm flex lg:hidden items-center justify-center gap-2" (click)="resetToRaw()">
+        <i class="bi bi-arrow-counterclockwise text-lg"></i>
+        نمودار پیشفرض
       </button>
       
       <button
-        class="hover:cursor-pointer text-dark-text3 dark:text-light-text3 hover:text-dark hover:dark:text-light duration-300 ease-in-out text-xs md:text-sm flex items-center justify-center gap-2" (click)="resetToRaw()">
+        appTooltip="نمودار پیشفرض"
+        class="hover:cursor-pointer text-dark-text3 dark:text-light-text3 hover:text-dark hover:dark:text-light duration-300 ease-in-out text-xs md:text-sm hidden lg:flex items-center justify-center gap-2" (click)="resetToRaw()">
         <i class="bi bi-arrow-counterclockwise text-lg"></i>
-        نمودار پیشفرض
       </button>
     </div>
   
@@ -51,27 +68,33 @@
             {{ open() }}<p class="text-dark dark:text-light text-xs">O</p>
           </span>
         </div>
-        <div>
+        <div class="py-0.5">
           <span
             class="text-xs font-medium flex bg-[#f4f4f4ac] dark:bg-[#1b1b1bac] py-0.5 px-2"
             [ngClass]="isPositive() ? 'text-trade-green' : 'text-trade-red'">
             <p class="text-dark dark:text-light text-xs">حجم تقریبی:&nbsp;</p>{{ volume() }}
           </span>
         </div>
+        <div class="py-0.5">
+          <span
+            class="text-xs font-medium flex bg-[#f4f4f4ac] dark:bg-[#1b1b1bac] py-0.5 px-2">
+            <p class="text-dark dark:text-light text-xs">{{ state().range }} / {{ state().interval }}</p>
+          </span>
+        </div>
       </div>
-      <div class="absolute right-0 top-0 {{ timeFramePanelOpened() ? 'flex' : 'hidden' }} flex-col max-h-full items-end gap-0.5 p-1 z-[3] bg-[#f4f4f4ac] dark:bg-[#1b1b1bac]">
+      <div class="absolute right-0 top-0 {{ timeFramePanelOpened() ? 'flex lg:hidden' : 'hidden' }} flex-col max-h-full items-end gap-0.5 p-1 z-[3] bg-[#f4f4f4ac] dark:bg-[#1b1b1bac]">
         <div class="flex flex-col gap-2 py-2">
           @for (p of presets; track p.label) {
             <button
-              appTooltip="{{p.title}}"
-              class="rtl px-15 hover:cursor-pointer text-sm text-dark-text3 dark:text-light-text3 hover:text-dark hover:dark:text-light duration-300 ease-in-out"
+              class="rtl px-2 hover:cursor-pointer text-sm text-dark-text3 dark:text-light-text3 hover:text-dark hover:dark:text-light duration-300 ease-in-out"
               (click)="selectPreset(p)">
-              {{ p.label }}
+              {{ p.title }}
             </button>
           }
         </div>
 
       </div>
+
     </div>
    
 </div>
