--- a/src/app/pages/converter/converter.component.html
+++ b/src/app/pages/converter/converter.component.html
@@ -3,30 +3,17 @@
     <div class="lg:flex-row-reverse flex-col flex-1 w-full flex gap-4 h-full">
         <div class="flex flex-col items-end border border-light-border2 dark:border-dark-border2 rounded-lg lg:flex-none p-4 gap-4 flex-1">
             <h2 class="text-dark-text dark:text-light-text text-sm md:text-base">مبدل ارز</h2>
-            <div class="relative min-w-60 text-sm">
+            <div class="relative min-w-58 text-sm">
                 <button
                     type="button"
                     (click)="toggleCurrencyTypeDropdown()"
-                    class="w-full flex justify-end items-center
-                        px-6 py-3 rounded-lg border
-                        text-dark-text4 dark:text-white
-                        text-sm font-medium gap-4 hover:cursor-pointer"
+                    class="w-full flex justify-between items-center
+                        px-6 py-3 rounded-lg border outline-0
+                        text-dark-text3 dark:text-light-text3
+                        text-sm font-medium hover:cursor-pointer"
                 >
-                    <span class="flex items-end gap-4 max-h-min" >
-                    {{ currencyTypes[currencyType()].title }}
-                    
-                    </span>
-
-                    <svg
-                    class="w-4 h-4 transition-transform"
-                    [class.rotate-180]="currencyDropdownOpen()"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    >
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M19 9l-7 7-7-7" />
-                    </svg>
+                  <i [class.rotate-180]="currencyDropdownOpen()" class="bi bi-chevron-down transition-transform"></i>
+                  <span class="flex items-end gap-4 max-h-min" >{{ currencyTypes[currencyType()].title }}</span>
                 </button>
                 @if (currencyDropdownOpen()) {
                     <ul class="absolute z-50 mt-2 w-full rounded-lg text-dark-text4 dark:text-white border">
@@ -35,7 +22,7 @@
                           <button
                             type="button"
                             (click)="selectCurrencyTypeDropdown(type)"
-                            class="w-full text-right px-4 py-2 text-dark-text4 dark:text-white hover:cursor-pointer"
+                            class="w-full text-right px-4 py-2.5 text-dark-text4 dark:text-white hover:cursor-pointer"
                           >
                             {{ type.title }}
                           </button>
@@ -45,7 +32,34 @@
                 }
             </div>
             <div class="flex gap-4 items-center justify-end">
-
+              <div class="relative min-w-58 text-sm">
+                  <button
+                      type="button"
+                      (click)="toggleCurrencyTypeDropdown()"
+                      class="w-full flex justify-between items-center
+                          px-6 py-3 rounded-lg border outline-0
+                          text-dark-text3 dark:text-light-text3
+                          text-sm font-medium hover:cursor-pointer"
+                  >
+                    <i [class.rotate-180]="currencyDropdownOpen()" class="bi bi-chevron-down transition-transform"></i>
+                    <span class="flex items-end gap-4 max-h-min" >{{ currencyTypes[currencyType()].title }}</span>
+                  </button>
+                  @if (currencyDropdownOpen()) {
+                      <ul class="absolute z-50 mt-2 w-full rounded-lg text-dark-text4 dark:text-white border">
+                        @for (type of currencyTypes; track type.id) {
+                          <li>
+                            <button
+                              type="button"
+                              (click)="selectCurrencyTypeDropdown(type)"
+                              class="w-full text-right px-4 py-2.5 text-dark-text4 dark:text-white hover:cursor-pointer"
+                            >
+                              {{ type.title }}
+                            </button>
+                          </li>
+                        }
+                      </ul>
+                  }
+              </div>
             </div>
         </div>
         <div class="flex flex-col flex-1 border border-light-border2 dark:border-dark-border2 p-4 rounded-lg">
