--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,26 +1,22 @@
-<footer class="min-h-16 bg-light2 py-2 dark:bg-dark2 w-full border-t border-t-light-border dark:border-t-dark-border flex-col md:flex-row flex items-center justify-between mx-auto px-4 lg:px-18 xl:px-41">
-    <div class="flex items-center h-full gap-4 flex-row-reverse md:flex-row justify-between md:justify-start md:w-auto w-full">
+<footer class="min-h-16 bg-light2 py-2 dark:bg-dark2 w-full border-t border-t-light-border dark:border-t-dark-border flex-col flex items-start justify-between mx-auto px-4 lg:px-18 xl:px-41">
+    <div class="flex items-center h-full gap-4 flex-row justify-between w-full">
         <div class="h-full flex items-center w-auto gap-1.5">
-            <span class="flex flex-col items-end">
+            <span class="flex flex-row-reverse gap-1 items-end">
                 <p class="text-green-btn text-md tracking-wide leading-[180%]">ارزیاب</p>
-                <p class="text-dark-text dark:text-light-text rtl text-xs leading-[180%]">© 2025</p>
+                <p class="text-dark-text dark:text-light-text rtl text-sm leading-[180%]"> - © 2025</p>
             </span>
             <div class="w-9">
                 <img class="h-full object-cover w-full" src="assets/images/arzyab_main.png" alt="logo">
             </div>
         </div>
-        <div class="flex h-full gap-4">
-            <span class="flex justify-start items-start py-2.5 gap-1.5 text-dark-text dark:text-light-text rtl text-xs ">
-                <p class="leading-[180%]">طراحی و پیاده‌سازی:</p>
-                <span class="flex flex-col text-xs leading-[180%]">
-                    <p class="font-normal">امیرحسین بدیعی</p>
-                    <p class="text-2xs text-dark-text4 dark:text-light-text4 font-light">(Amirhossein Badiei)</p>
-                </span>
-            </span>
+        <div class="flex flex-col justify-center items-end self-start md:self-auto">
+            <p class="text-dark-text dark:text-light-text rtl text-xs leading-[180%]">منبع نرخ ها: وبسایت TGJU</p>
+            <p class="text-2xs text-dark-text4 dark:text-light-text4 rtl text-xs leading-[180%]">نرخ‌ها صرفاً جهت اطلاع‌رسانی هستند.</p>
         </div>
     </div>
-    <div class="flex flex-col justify-center items-end self-start md:self-auto">
-        <p class="text-dark-text dark:text-light-text rtl text-xs leading-[180%]">منبع نرخ ها: وبسایت TGJU</p>
-        <p class="text-2xs text-dark-text4 dark:text-light-text4 rtl text-xs leading-[180%]">نرخ‌ها صرفاً جهت اطلاع‌رسانی هستند.</p>
-    </div>
+    <span class="flex justify-start items-start py-2.5 rtl dark:text-white text-dark-hover gap-2 text-xs leading-[180%]">
+        <p class="font-normal text-dark-text dark:text-light-text leading-[180%]">توسعه دهنده: امیرحسین بدیعی</p>
+        |
+        <p class="font-normal text-dark-text dark:text-light-text leading-[180%]">طراح رابط کاربری: امیر طهرانی</p>
+    </span>
 </footer>
