--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<main class="w-full min-h-[var(--screen-height-sm)] md:min-h-[var(--screen-height)] bg-light dark:bg-dark flex flex-col flex-1 pt-16 pb-6">
+<main class="w-full min-h-[var(--screen-height)] bg-light dark:bg-dark flex flex-col flex-1 pt-16 pb-6">
     
     <div class="mx-0 sm:mx-auto sm:max-w-256 sm:w-full px-0 sm:px-28 md:px-36">
         <div class="order-2 relative sm:order-1 px-4 sm:px-0 overflow-hidden flex justify-end bg-light dark:bg-dark border-b border-b-light-text2 dark:border-b-dark-text2">        
