--- a/src/styles.css
+++ b/src/styles.css
@@ -279,6 +279,41 @@
 .scroll-snap-align-end {
     scroll-snap-align: end;
 }
+.top-speech-bubble {
+	border-radius: .4em;
+    padding-inline: 0.3rem;
+	/* left: 1.4rem; */
+    top: -4rem;
+	padding-inline: 0.7rem;
+	padding-block: 0.5rem;
+}
+.top-speech-bubble:after {
+    content: '';
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border: 0.813em solid transparent;
+	border-top-color: var(--bg-speech);
+	border-bottom: 0;
+	margin-left: -10px;
+	margin-bottom: -0.8rem;
+	/*
+    content: '';
+	position: absolute;
+	left: 50%;
+    bottom: 0;
+	width: 0;
+	height: 0;
+	border: 0.813em solid transparent;
+	margin-top: -0.812em;
+	border-left: 0;
+	border-right-color: var(--bg-speech);
+	margin-left: -0.8rem;
+    */
+}
+
 
 .speech-bubble {
 	border-radius: .4em;
